tests/baselines/reference/parserRegularExpressionDivideAmbiguity2.errors.txt
==== tests/cases/compiler/parserRegularExpressionDivideAmbiguity2.ts (2 errors) ====
    (1) /notregexp/a.foo();
         ~~~~~~~~~
!!! parserRegularExpressionDivideAmbiguity2.ts(1,6): error TS2095: Cannot find name 'notregexp'.
                   ~
!!! parserRegularExpressionDivideAmbiguity2.ts(1,16): error TS2095: Cannot find name 'a'.